--- a/manual-config.org
+++ b/manual-config.org
@@ -37,6 +37,31 @@ auth.lower+year+veryshorttitle.lower
 
 /home/vatai/Sync/zotero-data
 
+* Megasync
+
+- AUR
+  #+begin_src shell
+    yay -S megacmd
+  #+end_src
+
+- Login
+  Start =mega-cmd= and and run =login <email> <password>=!
+
+- Setup sync
+  #+begin_src shell
+    mega-sync Mega .
+  #+end_src
+
+- Copy mega-cmd@.service
+  #+begin_src shell
+    sudo cp mega-cmd@.service /etc/systemd/system/
+  #+end_src
+
+- Enable the megasync
+  #+begin_src shell
+    sudo systemctl enable mega-cmd@vatai
+  #+end_src
+
 * Riken Wifi r-ccs-wlan
 
 - Security: WPA & WPA2 Enterprise
